css/app.css
		body {
			/*Color need to be changed!*/
			/*background: #212529;*/
			background: white;
			/*background: white;*/
			font-family: "Nunito", sans-serif;
		}

		#mainNavbar {
			font-size: 1.5rem;
			font-weight: 100;
			/*background: rgba(33,37,41, 1);*/
		}

		#mainNavbar .nav-link {
			font-family: 'Inconsolata', monospace;
			color: black;
			font-size: 1.2rem;
		}

		#mainNavbar .nav-link:hover {
			/*Color need to be changed!*/
			color: #EA1C2C;
		}

		#mainNavbar .navbar-brand {
			/*color: #EA1C2C;*/
			padding-left: 0.2rem;
			padding-right: 0.2rem;
			font-family: 'Inconsolata', monospace;
			color: white;
			background: black;
			font-size: 1.3rem;
		}

		.navbar.scrolled {
   			/*background: rgba(33,37,41, 1);*/
    		transition: background 500ms;
		}
		.navbar-toggler {
			/*Color need to be changed!*/
			background: #EA1C2C;
		}

		.container {
			width: 50%;
		}

		#profile-image {
			size: 10px;
			width: 10rem;
		}
		.center-cropped {
  			width: 20em;
  			height: 10em;
  			background-position: center center;
  			background-repeat: no-repeat;
			}


		#sidebar-pic {
			width: auto;
			height: 100%;
			position:fixed;
		}


		.card {
			border: none;
			margin-top: 0;
			margin-top: 2rem;
			margin-bottom: 2rem;
			/*margin-bottom: 2rem;*/
			/*border: 2px solid red;*/*/
		}
		.container-fluid {
			/*margin-left: 10rem;*/
			padding-left: 0rem;
			height: 100%;
			/*border: 2px solid red;*/
		}

		 .nav-tabs  {
    		background-color:white;
    		font-weight:bolder;
    		border-top-left-radius:10px;
    		border-top-right-radius:10px;
    		margin-top: 20px;
    		color:orange;
		}

		#post-div div a {
			color: black;
			font-size: 1.4rem;
		}
		#post-div div a:hover {
			color: red;
		}

		.nav-bar a {
			color: black;
		}

		.post-container {
			margin-top: 0rem;
			padding-top: 0rem;
			width: 100%;
		}
		#page-container {
			/*color: blue;*/
			width: 70%;
		}
		#page-nav {
			background: black;
		}
		#left-navtag {
			padding-left: 2rem;
		}
		.hometitle a,.hometitle a:link{
			font-family: 'Inconsolata', monospace;
		    color:#000;
		    text-decoration:none;
		    position:relative;
		    padding:10px 15px;
		}
		.hometitle a:after{
		    content: "";
		    width: 0;
		    height: 1px;
		    background: red;
		    position: absolute;
		    bottom: 0;
		    left: 50%;
		    transition: all .2s;
		}
		.hometitle a:hover:after,.hometitle a.active:after{
		    left: 0%;
		    width: 100%;
		}
		html {
		  overflow-y: scroll;
		}

		:root {
		  overflow-y: auto;
		  overflow-x: hidden;
		}

		:root body {
		  position: absolute;
		}

		body {
		  width: 100vw;
		  overflow: hidden;
		}

		div p {
			font-family: 'Inconsolata',  monospace, 'Noto Serif SC', serif;
			/*font-family: 'Inconsolata', monospace;*/
		}
		@media (max-width: 1200px) {
			.blurb h2 {
				font-size: 2rem;
			}
		}

